--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: Px3Su3ThrpI1YOS+Ne4RtOIW3JkGr+ClIm8o25PR8LxrrMe1pwEi3cgzI5csADLdBxd8RyUr/aKoWRWKU07UZtqDl7XjzLHzFTz64XAH2sI+kD5tA3N47nhj+rWTU3EHnt2ps7I7ltFjUIYFSmZ/CHK5TkIQOFfiR9hB9CL0oh4=
+    secure: UhtS/l7knDunY2PnKyRDHVXsA5flS/1ByywbHdF5W+GbQ3g0C7qmKwTA+3PqaWejCZQSTWaN3pTUSNkyke7B1PEPKOMDPDFxuauPMOgGV5d1Svj7XSsk0YnQOEHddsv1nQnoU8iJOT+CJ22Uuk2ZPlo464c9BXuqzIr6lJL9CO4=
